--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://blog.usetada.com/hubfs/Mengenal%20Employee%20Perks%20dan%20Benefitnya%20untuk%20Karyawan.jpg" />
+    <!-- Add this line in your index.html head section -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User_App</title>
   </head>
